More fixups
Signed-off-by: cpw <cpw+github@weeksfamily.ca>